--- a/templates/index.html
+++ b/templates/index.html
@@ -55,7 +55,9 @@
   </head>
   <body>
     <div class="container">
-      <h2 class="heading">California Housing Price Prediction</h2>
+      <h2 class="heading">
+        California Housing Price Prediction Learning Model
+      </h2>
       <form id="predictionForm">
         <div class="mb-3">
           <label class="form-label">Median Income</label>
